# libtrf

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
.github/workflows/: codeql-analysis.yml  ubuntu-build.yml
_sources/: index.rst.txt
_sources/api/: trf.rst.txt  trf_inet.rst.txt  trf_msg.rst.txt  trf_ncp.rst.txt  trf_preflight.rst.txt
_sources/network/: infiniband.rst.txt  mellanox.rst.txt  offload.rst.txt
api/: index.html  trf.html  trf_def.html  trf_inet.html  trf_interface.html  trf_internal.html  trf_msg.html  trf_ncp.html  trf_preflight.html  trf_proto.html
docs/: .gitignore  Doxyfile.in  conf.py  index.rst
docs/api/: index.rst  trf.rst  trf_def.rst  trf_inet.rst  trf_interface.rst  trf_internal.rst  trf_msg.rst  trf_ncp.rst  trf_preflight.rst  trf_proto.rst
docs/network/: index.rst  setup.rst
docs/source/: conf.py  index.rst
docs/system/: index.rst  mem.rst
libtrf/: .gitignore  CMakeLists.txt
libtrf/conf/linux/: networks.conf
libtrf/conf/osx/: networks.conf
libtrf/examples/: remake.sh  test-client.c  test-server.c
libtrf/examples/basic/: Makefile  client.c  server.c
libtrf/examples/subchannel/: .gitignore  client.c  common.h  server.c  test.sh
libtrf/include/: trf-ncp.h  trf.h  trf_def.h  trf_fabric.h  trf_inet.h  trf_interface.h  trf_internal.h  trf_log.h  trf_msg.h  trf_msg.pb-c.h  trf_msg.pb.h  trf_ncp.h  trf_ncp_client.h  trf_ncp_server.h  trf_platform.h  trf_preflight.h  trf_protobuf.h
libtrf/include/internal/: trfi.h  trfi_fabric.h  trfi_ncp.h  trfi_ncp_client.h  trfi_ncp_server.h
libtrf/src/: pbdef.sh  trf-ncp.c  trf.c  trf_fabric.c  trf_inet.c  trf_interface.c  trf_internal.c  trf_log.c  trf_msg.c  trf_msg.pb-c.c  trf_msg.pb.c  trf_msg.proto  trf_ncp.c  trf_ncp_client.c  trf_ncp_server.c  trf_platform.c  trf_preflight.c
libtrf/src/internal/: trfi.c  trfi_ncp.c  trfi_ncp_client.c  trfi_ncp_server.c
libtrf/src/nanopb/: pb.h
network/: index.html  infiniband.html  mellanox.html  offload.html  setup.html
system/: index.html  mem.html
